Fix bug 47022 by fixing typo in mousemove listener registration. r: jst